# TrackieLLM

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  Makefile  README.md  SECURITY.md  TrackieLLM.md  TrackieLLMnstps.md
.github/workflows/: ci_cd.yml
config/: hardware.default.yml  system.default.yml
modules/config_loader-rs/: Cargo.toml  build.rs  cbindgen.toml
modules/config_loader-rs/include/: via_config.h
modules/config_loader-rs/src/: lib.rs  models.rs
modules/core/: CMakeLists.txt
modules/core/include/via/core/: App.h  IModule.h
modules/core/src/: App.cpp
modules/hal-c/: CMakeLists.txt
modules/hal-c/include/via/hal/: hal.h
modules/hal-c/src/: audio.c  camera.c
modules/hal-c/src/optim/: audio_filter_arm.s
modules/perception/: CMakeLists.txt
modules/perception/include/via/perception/: IProcessor.h  PerceptionEngine.h
modules/perception/src/: OnnxRuntimeProcessor.cpp  Preprocessor.cpp
modules/perception/src/optim/: postprocess_detect_arm.s  preprocess_image_arm.s
modules/reasoning/: CMakeLists.txt
modules/reasoning/include/via/reasoning/: LlmInterpreter.h
modules/reasoning/src/: LlmInterpreter.cpp
modules/shared/: CMakeLists.txt
modules/shared/include/via/shared/: DataStructures.h  SafeQueue.h
scripts/deployment/: package_os.sh  package_studio.bat
scripts/setup/: download_models.py  install_deps.bat  install_deps.sh
scripts/training/: finetune_dataset.json  requirements.txt  train.py
